# self_study_single_LLM_exchange

./: Cargo.toml  readme.md
1_shot_experiment/: deepseekv4_pro.md  project-prompt.json  project-prompt.md  qwen36.md
reconstruction_experiment/: deepseek_prompt.md  deepseekv4_pro_reconstruction.md  qwen36_reconstruction.md  qwen_suggested_prompt.md  qwen_suggested_prompt_raw.json  reconstruction_prompt.json  reconstruction_prompt.md
src/: deepseek_after_fixes.md  deepseek_cleaned_up.md  main.rs  qwen_quick-fixes.md
